--- a/GTA03.mw
+++ b/GTA03.mw
@@ -23,6 +23,8 @@ Removed:
 * Aug.12.2008:  GTA03EVB Hardware Verification of the u-blox 5 Antaris
 * Aug.12.2008:  GPS performance tested
 
+ps: EVB stands for Evaluation Board
+
 == Sources ==
 * http://n2.nabble.com/Weekly-Engineering-News-33-2008-tp729555p729555.html
 * http://wiki.openmoko.org/wiki/MokoForesight
