--- a/Debian.mw
+++ b/Debian.mw
@@ -29,6 +29,7 @@ Set the clock manual using, e.g.
 
 Issues:
 * That's probably not sufficient to keep the clock accurate.  It might be worth configuring some form of NTP.
+** Setting the clock could be done via GPS: [[Getting_GPS_console_output_with_gllin#GPRMC_message]]
 
 == WLAN ==
 
