*Empty MediaWiki Message*

--- a/Openmoko_Community_Applications.mw
+++ b/Openmoko_Community_Applications.mw
@@ -137,7 +137,7 @@ Please add your application to the bottom of the list
  |[[Image:OrreryImage1.png|thumb|left]][[Image:OrreryImage2.png|thumb|right]]
  |-
  |Application Status
- |It works, but is not neatly packaged yet.   Available as tarball.
+ |It works, and .ipk packages are available for 2007.2 and 2008.8.
  |-
  |Application Description
  |Orrery displays the objects in the night (or day) sky.  It uses the GPS position, if available.
