/* Flashing the Kernel */

--- a/Flashing_the_Neo_FreeRunner.mw
+++ b/Flashing_the_Neo_FreeRunner.mw
@@ -95,6 +95,8 @@ More detailed manual for gfu-util is available here : [[Dfu-util]]
 
 == Flashing the Kernel ==
 
+ Note: The phone needs to be in the U-boot bootup menu for this to work. Get there by holding down the aux button while powering up the device.
+
 The command format is 
 
  dfu-util -a kernel -R -D ''/path/to/uImage''
