--- a/Distributions.mw
+++ b/Distributions.mw
@@ -159,7 +159,7 @@ Debian Linux, the whole distribution, on a mobile phone.
 |-
 | Middleware || gsmd/neod || freesmartphone.org || qtopia-x11 || freesmartphone.org || qtopia || freesmartphone.org
 |-
-| [[Java]] || Jalimo || ? || ? || ? || ? || style="background:lightgreen;" | Yes
+| [[Java]] || Jalimo || ? || ? || ? || ? || No
 |-
 | [[Python]] || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes || ? || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes
 |-
@@ -175,6 +175,7 @@ Footnotes:
 (3) there is a UI but it crashes the device when used.
 
 (*) unstable
+
 == External links ==
 
 Original distribution descriptions are from Mickey Lauer's [http://www.vanille-media.de/site/index.php/2008/06/28/gtk-asu-fso-tmtla/ GTK, ASU, FSO, TMTLA!].
