--- a/Group_sales.mw
+++ b/Group_sales.mw
@@ -1947,7 +1947,7 @@ Due to common customs problems we created google group to discuss how to get tha
 |-
 | 51. [[Special:Emailuser/Self-mademan|Self-mademan]]
 | Self-mademan
-| 1
+| 0(1) Жду цены и ясности по доставке
 | 0
 | 0
 |-
