--- a/FreeRunner:_Selected_Blogs_and_Articles.mw
+++ b/FreeRunner:_Selected_Blogs_and_Articles.mw
@@ -10,7 +10,7 @@ Newest on top.
 
 == English ==
 
-===August===
+=== August 2008 ===
 * Andrénalin heavy metal chainsaw!!! [http://andre.web-yard.de/blog/2008/08/03/neo-freerunner-rocks-hard-rides-free/ http://andre.web-yard.de/blog/2008/08/03/neo-freerunner-rocks-hard-rides-free/]
 * Monochrome Mentality [http://monochromementality.com/index.php/blog/show/FSO-Milestone-II-Phot-Safari-and--rant.html FSO Milestone II Photo Safari and rant]
 
@@ -30,6 +30,9 @@ Newest on top.
 * Ars Technica: [http://arstechnica.com/reviews/os/open-moko-software.ars Ars Technica First Look at OpenMoko]
 * Juan Lucas Domínguez Rubio: [http://gvsigmobileonopenmoko.wordpress.com/2008/07/02/first-experience-with-openmoko/ First experience with Openmoko]
 * Philipp Kern: [http://www.philkern.de/weblog/en/neo_freerunner.html Neo Freerunner: First impressions]
+
+=== June 2008 ===
+* Andrzej Zaborowski: [http://unadventure.wordpress.com/2008/06/08/accelerating-in-my-pocket/ Accelerating in my pocket]
 
 === May 2008 ===
 * Kevin Dean: [http://www.monochromementality.com/index.php/blog/show/Day-One-Openmoko-Freerunner.html Day One: Openmoko Freerunner]
