added DayDeal styluses, removed from category "ideas"

--- a/Stylus_Alternatives.mw
+++ b/Stylus_Alternatives.mw
@@ -1,11 +1,13 @@
-A list of better alternative than the default stylus of the Neo:
+A list of stylus alternatives for the Neo:
+
 
 * http://www.comfortstylus.com/index03.jpg - This is an alternative Stylus for the Nintendo DS.
 Buy here: http://www.comfortstylus.com/
 
+*DayDeal styluses
+Buy here: http://www.daydeal.com/home.php?cat=2654
 
 * http://www.jetmall.net/ProductImages/pic_d2_stylus.jpg - This is the default Stylus for the Cowon D2.
 Buy here: http://www.jetmall.net/index.asp?PageAction=VIEWPROD&ProdID=303)
 
 [[Category:Hardware]]
-[[Category:Ideas ]]
