/* Step1. Scaricare DFU-util */

--- a/Manuals%2FNeo_FreeRunner%2Fit.mw
+++ b/Manuals%2FNeo_FreeRunner%2Fit.mw
@@ -502,10 +502,10 @@ Altre informazioni sull'immagine corrente: http://wiki.openmoko.org/wiki/Latest_
 
 === Step1. Scaricare DFU-util ===
 Puoi scaricare il software per l'aggiornamento da: 
-http://downloads.openmoko.org/releases/Freerunner/dfu-util
+http://downloads.openmoko.org/releases/Om2008.4/dfu-util
 
 Su un sistema GNU/Linux puoi usare i seguenti programmi per scaricare ''dfu-util'':
- wget http://downloads.openmoko.org/releases/Freerunner/dfu-util
+ wget http://downloads.openmoko.org/releases/Om2008.4/dfu-util
 
 Successivamente dovete cambiare i permessi al file:
  chmod a+x dfu-util
