/* Step 2. Aggiornare il Kernel */

--- a/Manuals%2FNeo_FreeRunner%2Fit.mw
+++ b/Manuals%2FNeo_FreeRunner%2Fit.mw
@@ -511,7 +511,7 @@ Successivamente dovete cambiare i permessi al file:
  chmod a+x dfu-util
 
 === Step 2. Aggiornare il Kernel ===
-Puoi scaricare il kernel da http://downloads.openmoko.org/releases/Freerunner/
+Puoi scaricare il kernel da http://downloads.openmoko.org/releases/Om2008.8/
 
 Digita i seguenti comandi su un sistema GNU/Linux. In alcuni sistemi bisogna essere l'utente root prima di fare questo lavoro.
  ./dfu-util -a (partion name) -R -D (download image file name)
