/* Aggiornare il Neo FreeRunner */

--- a/Manuals%2FNeo_FreeRunner%2Fit.mw
+++ b/Manuals%2FNeo_FreeRunner%2Fit.mw
@@ -496,7 +496,7 @@ Premere e mantenere premuto il bottone AUX e poi il bottone Power. Quindi rilasc
 == Aggiornare il Neo FreeRunner ==
 Dato che Openmoko è in continuo sviluppo, Openmoko rilascia delle versioni aggiornate del filesystem root, del kernel e del [[Bootloader| U-Boot]]. Questi possono essere inseriti nella memoria Flash del Neo Freerunner. Puoi usare il cavo USB e il programma forniti per aggiornare il tuo Neo Freerunner.
 
-{{note|L'Openmoko software team rilascia immagini del sistema aggiornate giornalmente. Se vuoi usare le ultime immagini, puoi scaricarle dal ''daily build'', ma noi raccomandiamo di usare l'immagine più stabile, scaricabile da http://downloads.openmoko.org/releases/Freerunner/. Le immagini presenti sono testate dal team di test.
+{{note|L'Openmoko software team rilascia immagini del sistema aggiornate giornalmente. Se vuoi usare le ultime immagini, puoi scaricarle dal ''daily build'', ma noi raccomandiamo di usare l'immagine più stabile, scaricabile da http://downloads.openmoko.org/releases/. Le immagini presenti sono testate dal team di test.
 
 Altre informazioni sull'immagine corrente: http://wiki.openmoko.org/wiki/Latest_Images}}
 
@@ -511,7 +511,7 @@ Successivamente dovete cambiare i permessi al file:
  chmod a+x dfu-util
 
 === Step 2. Aggiornare il Kernel ===
-Puoi scaricare il kernel da http://downloads.openmoko.org/releases/Om2008.8/
+Puoi scaricare il kernel da http://downloads.openmoko.org/releases/
 
 Digita i seguenti comandi su un sistema GNU/Linux. In alcuni sistemi bisogna essere l'utente root prima di fare questo lavoro.
  ./dfu-util -a (partion name) -R -D (download image file name)
@@ -542,7 +542,7 @@ Done!
 
 === Step 3. Aggiornare il Filesystem Root ===
 Puoi scaricare il filesystem root da:
-http://downloads.openmoko.org/releases/Freerunner/
+http://downloads.openmoko.org/releases/
 
 Digita i seguenti comandi in un sistema GNU/Linux. Su alcuni sistemi bisogna essere l'utente root (amministratore).
 
