--- a/Navit.mw
+++ b/Navit.mw
@@ -70,6 +70,8 @@ A current fix is to set the LANG variable before calling navit. For example:
 
 Note that a short syntax (e.g. LANG=fr) would not work.
 
+If you put an "export LANG=fr_FR.UTF-8" into your /etc/.profile file, it will automatically be set this environment variable every time you boot up.  This way, you can launch Navit from the Icon in Illume.
+
 http://trac.navit-project.org/ticket/51
 
 === Speech ===
