/* A very ugly /etc/init.d/wlan startscript */

--- a/Neo_FreeRunner_Wifi.mw
+++ b/Neo_FreeRunner_Wifi.mw
@@ -249,6 +249,8 @@ http://hostap.epitest.fi/gitweb/gitweb.cgi?p=hostap.git;a=blob_plain;f=wpa_suppl
  
  exit $RETVAL
 
+Note: Don't forget to make this script executable with "chmod +x <filename>"
+
 == Available Software ==
 
 Programs in development providing GUI interfaces to administer WiFi connections:
