/* Making the cursor invisible */

--- a/Debian.mw
+++ b/Debian.mw
@@ -117,4 +117,4 @@ To make the cursor invisible create a file called empty.cursor with this content
     0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00};
 Now you can execute:
  xsetroot -cursor empty.cursor empty.cursor
-and the cursor will be invisible. To make this permanent, execute this within xsession or kind of that. It must be executed with something after the Xserver has started.
+and the cursor will be invisible. To make this permanent you have to invent something ;) It must be executed after zhone has finished starting up.
