--- a/Distributions.mw
+++ b/Distributions.mw
@@ -159,7 +159,7 @@ Debian Linux, the whole distribution, on a mobile phone.
 |-
 | Middleware || gsmd/neod || freesmartphone.org || qtopia-x11 || freesmartphone.org || qtopia || freesmartphone.org
 |-
-| [[Java]] || Jalimo || ? || ? || ? || ? || No
+| [[Java]] || Jalimo || Jalimo || Jalimo || ? || ? || No
 |-
 | [[Python]] || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes || ? || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes
 |-
