/* Use cases */  Removed link to email that was not really relevant. Added link to new data logger page.

--- a/GPS_applications.mw
+++ b/GPS_applications.mw
@@ -1,4 +1,3 @@
-
 == Possible GPS applications ==
 
 As people develop more sophisticated GPS applications, please note them here.
@@ -13,10 +12,8 @@ As people develop more sophisticated GPS applications, please note them here.
 * I want to use [[Openstreetmap]] data in a map viewer.
 * I want to use the smartphone GPS to go [[Geocaching]]
 * I want the GPS to update profile settings based on my location. Example, mute the phone ringer when I am at work.
-* I want to log GPS data for later analysis.
+* I want to log GPS data for later analysis. [[GPS Data Logger]]
 * I want to collect GPS data for scientific field work (forestry, biology, etc)
-
-See [http://lists.openmoko.org/pipermail/community/2007-July/007252.html for another collection of ideas.
 
 === Applications software ===
 
