/* Field Collection Tool */

--- a/GPS_Data_Logger.mw
+++ b/GPS_Data_Logger.mw
@@ -69,5 +69,10 @@ Should we expand on that on this page? It would be neat to have something that i
 
 '''Points, lines and polygons.''' You should be able to collect all three. A typical use for polygons is to walk around a space while collecting GPS points to create a polygon showing the location of some physical object such as a wetland.
 
+== Data format and exchange ==
+
+The data should be stored internally in a compact form that is open or at least well documented (for example ESRI Shapefiles). Storing in XML based formats is bulky and should probably be avoided. 
+
+There should be a desktop tool to manage transferring the data that has been collected from the smartphone to more portable exchange formats such as GPX and GML and KML. "GPS Office"
 
 [[Category: GPS]]
