--- a/GPS_Data_Logger.mw
+++ b/GPS_Data_Logger.mw
@@ -19,6 +19,8 @@ Initially the main functions could be broken out these components.
 # A '''Data Logger''' that can run all the time and record GPS data.
 # A '''Field Collection Tool''' that allows doing specific operations such as averaging GPS data while waiting at a point for increased accuracy and entering attributes for a point.
 
+'''Mapping''' We should consider how to support mapping as a part of the field collection tool; it is not strictly necessary but it can be very nice to have it incorporated. Likewise if you are logging a breadcrumb trail it can be very nice to be able to see it on the map. A mapping component will need to be able to update its display with data collected from the logger and the field collection tool.
+
 == Main components ==
 
 === GPS multiplexer ===
