/* Data format and exchange */

--- a/GPS_Data_Logger.mw
+++ b/GPS_Data_Logger.mw
@@ -77,4 +77,8 @@ The data should be stored internally in a compact form that is open or at least 
 
 There should be a desktop tool to manage transferring the data that has been collected from the smartphone to more portable exchange formats such as GPX and GML and KML. "GPS Office"
 
+== People working on this project ==
+
+[[User:Brian H Wilson]] blabbing a lot and wishing he had more time to work on this.
+
 [[Category: GPS]]
