--- a/GPS_Data_Logger.mw
+++ b/GPS_Data_Logger.mw
@@ -71,6 +71,15 @@ Should we expand on that on this page? It would be neat to have something that i
 
 '''Points, lines and polygons.''' You should be able to collect all three. A typical use for polygons is to walk around a space while collecting GPS points to create a polygon showing the location of some physical object such as a wetland.
 
+==== Other related tools ====
+
+Other specialized field collection tools could be used for 
+
+* Asset management, example: urban forestry, agriculture, public works
+* Map making, for example to collect data for the Open Street Map project
+* Geocaching
+* ??? Add yours here ???
+
 == Data format and exchange ==
 
 The data should be stored internally in a compact form that is open or at least well documented (for example ESRI Shapefiles). Storing in XML based formats is bulky and should probably be avoided. 
