--- a/Group_sales.mw
+++ b/Group_sales.mw
@@ -2627,9 +2627,9 @@ Due to common customs problems we created google group to discuss how to get tha
 |-
 | 2. [[mravil]]
 | [http://groups.google.com/groups/profile?enc_user=wPw2BRIAAABHcFCworg3Kx3LJrgKbX7Q8rhlH0Pnl47z4AZhN98BFg mravil]
-| 1 (P5.5)
-| 0
-| 0
+| 1
+| 0 (еще не решил)
+| 1
 |-
 |Total number:
 |
