*Empty MediaWiki Message*

--- a/GTA03.mw
+++ b/GTA03.mw
@@ -22,6 +22,7 @@ Removed:
 * Aug.12.2008:  The core can run at 533 MHz with 133MHz SDRAM 
 * Aug.12.2008:  GTA03EVB Hardware Verification of the u-blox 5 Antaris
 * Aug.12.2008:  GPS performance tested
+* Aug.18.2008:  GTA03EVB Hardware Verification of the Siemens MC 75i EDGE MODEM
 
 ps: EVB stands for Evaluation Board
 
