Add link to feeds for FSO ms 2.

--- a/Download.mw
+++ b/Download.mw
@@ -104,6 +104,8 @@ Milestone 1 is here: http://downloads.openmoko.org/framework/milestone1/
 
 Milestone 2 is here: http://downloads.openmoko.org/framework/milestone2/ 
 
+Updates to milestone 2 are here: http://downloads.openmoko.org/framework/milestone2/updates/  (After installing, log in to the FSO image and modify the "my-distribution.org" urls in  /etc/opkg/*-feed.conf to point to directories under this URL)
+
 Browse the source: http://trac.freesmartphone.org:8000/trac-example/browser 
 
 Learn more at its wiki page: [[OpenmokoFramework]]
