--- a/Download.mw
+++ b/Download.mw
@@ -102,9 +102,7 @@ Milestone 1 is here: http://downloads.openmoko.org/framework/milestone1/
 
 [http://www.youtube.com/watch?v=toPe0S8QpJY Video of FSO Milestone 1]
 
-Milestone 2 is here: http://downloads.openmoko.org/framework/milestone2/ 
-
-Updates to milestone 2 are here: http://downloads.openmoko.org/framework/milestone2/updates/  (After installing, log in to the FSO image and modify the "my-distribution.org" urls in  /etc/opkg/*-feed.conf to point to directories under this URL)
+Milestone 2 is here: http://downloads.openmoko.org/framework/milestone2/  See that page for information about obtaining updates.
 
 Browse the source: http://trac.freesmartphone.org:8000/trac-example/browser 
 
