Reverted updates info (no updates so far...)

--- a/Download.mw
+++ b/Download.mw
@@ -102,7 +102,7 @@ Milestone 1 is here: http://downloads.openmoko.org/framework/milestone1/
 
 [http://www.youtube.com/watch?v=toPe0S8QpJY Video of FSO Milestone 1]
 
-Milestone 2 is here: http://downloads.openmoko.org/framework/milestone2/  See that page for information about obtaining updates.
+Milestone 2 is here: http://downloads.openmoko.org/framework/milestone2/
 
 Browse the source: http://trac.freesmartphone.org:8000/trac-example/browser 
 
