*Empty MediaWiki Message*

--- a/Hammerhead_PMB_2520.mw
+++ b/Hammerhead_PMB_2520.mw
@@ -1,4 +1,5 @@
 * Feature: GPS + AGPS
+* Facturer: Global Locate
 * Product Homepage: [http://www.globalocate.com/SEMICONDUCTORS/SEMI_HAMMER_Frameset.htm Hammerhead]
 * Driver: Implemented as a binary with NMEA output suitable for the gpsd daemon ([[gpsd]])
 * Externally-accessible GPS antenna connector of type MMCX
