*Empty MediaWiki Message*

--- a/Openmoko_Local_Groups:_San_Francisco.mw
+++ b/Openmoko_Local_Groups:_San_Francisco.mw
@@ -210,4 +210,11 @@ Are there any other OpenMoko community members here?
 |San Francisco, CA
 |
 |
+|-
+|[[User:nvanfossen|Nick Van Fossen]]
+|SW/HW Testing
+|Programming/Hacking Linux
+|Petaluma, CA
+| [[Image: Moko.jpg|center]] (freerunner)
+|
 [[Category:Openmoko Local Groups]]
