*Empty MediaWiki Message*

--- a/Samsung_S3C2410.mw
+++ b/Samsung_S3C2410.mw
@@ -1,4 +1,4 @@
-* Feature: Processor + USB Host + USB Device 
+* Feature: Processor + USB Host + USB Device + MicroSD support
 * Full name: Samsung S3C2410AL-26
 * Product Homepage: [http://www.samsung.com/global/business/semiconductor/productInfo.do?fmly_id=229&partnum=S3C2410 S3C2410.htm]
 * User Manual: [http://www.samsung.com/global/business/semiconductor/productRightMenuDown.do?doc_file=26537 2410UserManual.pdf]
@@ -7,8 +7,17 @@
 * Capable of running up to 266 MHz
 * BSDL File: [http://www.samsung.com/global/business/semiconductor/productRightMenuDown.do?doc_file=26554 S3C2410_BGA_BSDLJTAGFILE.bsd]
 
+=== MicroSD support ===
+It supports SDHC.  
+* Connected to: S3C2410 MMC/SD controller
+* Driver: https://svn.openmoko.org/trunk/src/target/kernel/patches/s3c_mci.patch
+* [[Supported microSD cards]]
+* Specifications: [http://www.sdcard.org/confirm/confirm_memorycard.aspx SD Simplified Specification], [http://www.mmca.org/compliance/buy_spec/AN_MMCA050419.pdf MMC (partial)], [http://www.sandisk.com/Assets/File/OEM/Manuals/manual-rs-mmcv1.0.pdf MMC (product manual)]
+
 == Neo 1973 ==
 * GPIO Assignments: https://svn.openmoko.org/trunk/doc/hardware/GTA01Bv4/gpio.txt
+* MicroSD slot is located [[Disassembling_Neo1973#Opening_back_cover|under battery]].
+* MicroSD mounted to: /media/card
 
 === USB Host ===
 The USB Host controller is inside the S3C2410
