/* Setting up Navit */

--- a/Navit.mw
+++ b/Navit.mw
@@ -22,6 +22,9 @@ Thanks to [[User:Alessandro | Alessandro]], stefan_schmidt, cp15 and all Navit d
 I got navit set up and configured to the point where it follows me on the map.  It doesn't have street names or any other information, just the map and the cursor showing the location and direction.  Here's what I did:
 * Install navit ipkg on NEO
  opkg install http://www.mikeasoft.com/~mike/ipk/armv4t/navit_0.0.4-r0_armv4t.ipk
+* If you have problems with the above version of Navit aborting on startup with an error like <code>street_get_data: assertion failed: (count < maxcount)</code> when using preloaded map data, then it's likely related to this: http://navit.svn.sourceforge.net/viewvc/navit?view=rev&revision=1169.  The following package has the fix (for some reason it's necessary to wget then install, instead of pointing opkg at the URL):
+ wget http://www.acoveo.org/navit_0.1.0+svnrev1255-r0_armv4t.ipk
+ opkg install --force-depends navit_0.1.0+svnrev1255-r0_armv4t.ipk
 * Or roll your own from svn using the toolchain (having checked out trunk in the navit directory, and assuming you have written navit_control):
  . /usr/local/openmoko/arm/setup-env
  om-conf navit --disable-samplemap
