--- a/TI_Calypso_D751992AZHH.mw
+++ b/TI_Calypso_D751992AZHH.mw
@@ -23,6 +23,7 @@ GPRS Class12/CS4 <br>
 *The firmware within GTA02 should be moko6 or later (internal code name)
 
 ==Neo 1973==
+{{Main|Neo_1973_hardware}}
 * Connected to: [[Samsung S3C2410]] UART1 (full-uart, RxD, TxD, CTS, RTS),
 * Connected to (userspace): /dev/ttySAC0
 * Accessible GSM/GPRS antenna jack (if battery cover is removed)
