*Empty MediaWiki Message*

--- a/Delta_DFBM-CS320_Class2_Module.mw
+++ b/Delta_DFBM-CS320_Class2_Module.mw
@@ -1,4 +1,4 @@
-* Feature: Bluetooth module 
+* Feature: Bluetooth module (V2.0+EDR)
 * using CSR BlueCore4
 * Data Sheet: [http://www.delta.com.tw/product/cp/vco/BT/download/pdf/CS/2.DFBM-CS320.pdf 2.DFBM-CS320.pdf]
 * CSR Data Sheet: [http://www.csrsupport.com/download/2302/CS-101564-DSP10%20BlueCore4-ROM%20Product%20Data%20Sheet.pdf CS-101564-DSP10 BlueCore4-ROM Product Data Sheet.pdf]
