--- a/TPO_TD028TTEC1.mw
+++ b/TPO_TD028TTEC1.mw
@@ -1,4 +1,4 @@
-* Feature: LCD Module
+* Feature: LCD Display
 * Spec: Toppoly (tpo) 2.8" diagonal (1.7" x 2.27" - 43mm x 58mm) 480x640 TD028TTEC1 module (283 DPI)
 * Using a Toshiba JBT6K74 TFT LCD Driver Chipset
 * Homepage: [http://www.tpo.biz/ENG/business-eng/Activer-Matrix-VGA.htm Activer-Matrix-VGA.htm]
@@ -6,11 +6,17 @@
 * Driver: https://svn.openmoko.org/trunk/src/target/kernel/patches/gta01-jbt6k74.patch
 * Backlight Driver: https://svn.openmoko.org/trunk/src/target/kernel/patches/gta01-backlight.patch
 
+=== Touch screen ===
+* Driver: https://svn.openmoko.org/trunk/src/target/kernel/patches/s3c2410_touchscreen.patch 
+Note: The touch screen isn't part of the TPO TD028TTEC1, but part of the reassembled LCD module (LCD display + Touch screen) that Openmoko gets from the factory.
+
 == Neo FreeRunner ==
 {{Main|Neo_FreeRunner_GTA02_Hardware}}
 * Connected to: [[Smedia Glamo 3362]] LCM interface and [[Smedia Glamo 3362]] SPI Interface<br>
+* Touch screen connected to: [[Samsung S3C2442B B54 TS]] controller
 
 == Neo 1973 ==
 {{Main|Neo1973_hardware}}
 * Connected to: [[Samsung S3C2410]] Display Controller and [[Samsung S3C2410]] SPI Interface channel 1
 * Backlight controllable via /sys/class/backlight/gta01-bl
+* Touch screen connected to: [[Samsung S3C2410]] TS controller
