--- a/TPO_TD028TTEC1.mw
+++ b/TPO_TD028TTEC1.mw
@@ -13,7 +13,7 @@ Note: The touch screen isn't part of the TPO TD028TTEC1, but part of the reassem
 == Neo FreeRunner ==
 {{Main|Neo_FreeRunner_GTA02_Hardware}}
 * Connected to: [[Smedia Glamo 3362]] LCM interface and [[Smedia Glamo 3362]] SPI Interface<br>
-* Touch screen connected to: [[Samsung S3C2442B B54 TS]] controller
+* Touch screen connected to: [[Samsung S3C2442B B54]] TS controller
 
 == Neo 1973 ==
 {{Main|Neo1973_hardware}}
