--- a/TPO_TD028TTEC1.mw
+++ b/TPO_TD028TTEC1.mw
@@ -8,7 +8,7 @@
 
 === Touch screen ===
 * Driver: https://svn.openmoko.org/trunk/src/target/kernel/patches/s3c2410_touchscreen.patch 
-Note: The touch screen isn't part of the TPO TD028TTEC1, but part of the reassembled LCD module (LCD display + Touch screen) that Openmoko gets from the factory.
+Note: The touch screen isn't part of the TPO TD028TTEC1, but part of the assembled LCD module (LCD display + Touch screen) that Openmoko gets from the factory.
 
 == Neo FreeRunner ==
 {{Main|Neo_FreeRunner_GTA02_Hardware}}
