/* Data format and exchange */

--- a/GPS_Data_Logger.mw
+++ b/GPS_Data_Logger.mw
@@ -86,6 +86,16 @@ The data should be stored internally in a compact form that is open or at least 
 
 There should be a desktop tool to manage transferring the data that has been collected from the smartphone to more portable exchange formats such as GPX and GML and KML. "GPS Office"
 
+=== RINEX ===
+
+Would RINEX be an appropriate format for internal storage?
+It's an exchange format.
+
+Specs are here: ftp://ftp.unibe.ch/aiub/rinex/
+
+This guy wrote a program that takes Ublox Antares 4 data and writes it as RINEX data.
+http://home.comcast.net/~dmilbert/softs/ant2rin.htm
+
 == People working on this project ==
 
 [[User:Brian H Wilson]] blabbing a lot and wishing he had more time to work on this.
