--- a/GPS_Data_Logger.mw
+++ b/GPS_Data_Logger.mw
@@ -88,8 +88,9 @@ There should be a desktop tool to manage transferring the data that has been col
 
 === RINEX ===
 
-Would RINEX be an appropriate format for internal storage?
-It's an exchange format.
+Would RINEX be an appropriate general format for internal storage?
+It's an exchange format but it's intended to include data required to perform post-processing.
+It might be overkill for applications that don't require post-processing. 
 
 Specs are here: ftp://ftp.unibe.ch/aiub/rinex/
 
